# miniprojekti

./: .gitignore  LICENSE  README.md  codecov.yml  gitignore  pyproject.toml  report.md  retro.md
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  app_io.py  main.py  ui.py
src/services/: add_entires.py
src/tests/: app_test.py  citekey.robot  commands.robot  delete.robot  doi.robot  editentry.robot  export.robot  format.robot  import.robot  list.robot  load.robot  placeholder_test.py  resource.robot  save.robot  search.robot
src/tests/src/: app_test.py
