[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = "Ryhmän 4 miniprojekti"
authors = ["sevonj <100710152+sevonj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybtex = "^0.24.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
