[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = "Ryhmän 4 miniprojekti"
authors = ["sevonj <100710152+sevonj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybtex = "^0.24.0"
setuptools = "^69.0.2"
pylint = "^3.0.2"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"
robotframework = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = 'ignore::DeprecationWarning:pybtex.*:'

[tool.coverage.run]
source = ['src']
omit = ['src/tests/**']

[tool.pylint.MAIN]
ignore-docstrings = 'yes'
ignore-patterns='src/tests/'
